deleting the current project no longer breaks the application now we load the first project instead if the desired project does not exist

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: 'Josefin Slab Bold';
-    src: url('../fonts/JosefinSlab-Bold.ttf') format('truetype');
-  }
-
   @font-face {
     font-family: 'Roboto';
     src: url('../fonts/Roboto-Bold.ttf') format('truetype');
